# voxel-engine

./: '  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini  premake5.lua  setup_dxc_and_agility_sdk.bat
.github/workflows/: ci.yml
include/: camera.hpp  common.hpp  pch.hpp  renderer.hpp  shader_compiler.hpp  types.hpp  voxel.hpp  window.hpp
include/voxel-engine/: camera.hpp  common.hpp  filesystem.hpp  pch.hpp  renderer.hpp  shader_compiler.hpp  timer.hpp  types.hpp  voxel.hpp  window.hpp
shaders/: debug_grid_shader.hlsl  gpu_culling_shader.hlsl  shader.hlsl  triangle_shader.hlsl  voxel_shader.hlsl
shaders/interop/: render_resources.hlsli
src/: CMakeLists.txt  camera.cpp  filesystem.cpp  main.cpp  renderer.cpp  shader_compiler.cpp  timer.cpp  voxel.cpp  window.cpp
